# deep-serialization

./: README.md  pyproject.toml
deep_serialization/: deep_serialization.py  example.py  json_converter.py  memory_objects.py  test_json.json  utils.py
