[tool.poetry]
name = "deep-serialization"
version = "0.1.4"
description = "Automatic python objects JSON serialization"
authors = ["Vyacheslav Tamarin <vyacheslav.tamarin@yandex.ru>"]
readme = "README.md"
packages = [{include = "deep_serialization"}]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deep-serialization = "deep_serialization:deep_serialization"
